Fixed form input styling to prevent zoom on mobile

--- a/public/css/elements/button.scss
+++ b/public/css/elements/button.scss
@@ -8,9 +8,9 @@
 	cursor: pointer;
 	display: block;
 	font-family: $triangle-font-main;
-	font-size: 0.8125rem;
+	font-size: 1rem;
 	font-weight: 700;
-	letter-spacing: 0.0125rem;
+	letter-spacing: 0.03rem;
 	line-height: 1.4rem;
 	padding: .375rem .75rem;
 	transition: all 0.6s ease 0s;
